@@ -15,3 +15,13 @@ Repo to keep some examples of new features (from Java 8 until last version).
 [Learn how to write fast Java code with the Vector API - JEP Café episode 18](https://www.youtube.com/watch?v=42My8Yfzwbg)  
 [Java Microbenchmark Harness (JMH)](https://github.com/openjdk/jmh)  
 [Microbenchmarking with Java](https://www.baeldung.com/java-microbenchmark-harness)  
+
+## Useful Commands
+
+```
+Command to compile using a incubator feature:
+~/IdeaProjects/java-new-features/src/main/java$ javac -d ~/IdeaProjects/java-new-features/out --add-modules jdk.incubator.vector me/bruno/santana/incubator/VectorApiDemo.java 
+
+Command to execute using a incubator feature:
+~/IdeaProjects/java-new-features/out$ java --add-modules jdk.incubator.vector me.bruno.santana.incubator.VectorApiDemo
+```
